tentative fix taille navbar mobile

--- a/src/all.sass
+++ b/src/all.sass
@@ -8,7 +8,7 @@ $primary-invert: $animapaise-blue-invert
 $body-color: #333
 $black: #2b2523
 
-$navbar-height: 10.4rem
+// $navbar-height: 10.4rem
 $navbar-item-img-max-height: none
 
 @import "~bulma"
