fix taille burger et taille image navbar

--- a/src/all.sass
+++ b/src/all.sass
@@ -8,7 +8,10 @@ $primary-invert: $animapaise-blue-invert
 $body-color: #333
 $black: #2b2523
 
-// $navbar-height: 10.4rem
+// $navbar-breakpoint: 1220px
 $navbar-item-img-max-height: none
+
+.navbar-burger
+  height: auto !important
 
 @import "~bulma"
