augmente taille burger

--- a/src/all.sass
+++ b/src/all.sass
@@ -14,4 +14,8 @@ $navbar-item-img-max-height: none
 .navbar-burger
   height: auto !important
 
+.navbar-burger span
+  height: 2px !important
+  width: 18px !important
+
 @import "~bulma"
