--- a/src/all.sass
+++ b/src/all.sass
@@ -11,11 +11,21 @@ $black: #2b2523
 // $navbar-breakpoint: 1220px
 $navbar-item-img-max-height: none
 
-.navbar-burger
-  height: auto !important
-
-.navbar-burger span
-  height: 2px !important
-  width: 18px !important
-
 @import "~bulma"
+
+.navbar-burger
+  height: auto 
+  margin-right: 20px
+.navbar-burger span
+  height: 3px 
+  width: 25px 
+.navbar-burger span:nth-child(1)
+  top: calc(50% - 10px) 
+.navbar-burger span:nth-child(2)
+  top: calc(50% - 1px) 
+.navbar-burger span:nth-child(3)
+  top: calc(50% + 8px) 
+.navbar-burger.is-active span:nth-child(1)
+  transform: translateY(9px) rotate(45deg) 
+.navbar-burger.is-active span:nth-child(3)
+  transform: translateY(-9px) rotate(-45deg) 
