--- a/src/all.sass
+++ b/src/all.sass
@@ -9,23 +9,27 @@ $body-color: #333
 $black: #2b2523
 
 // $navbar-breakpoint: 1220px
-$navbar-item-img-max-height: none
+// $navbar-height: 10rem
+$navbar-item-img-max-height: auto
 
 @import "~bulma"
 
 .navbar-burger
-  height: auto 
+  height: auto
   margin-right: 20px
 .navbar-burger span
-  height: 3px 
-  width: 25px 
+  height: 3px
+  width: 25px
 .navbar-burger span:nth-child(1)
-  top: calc(50% - 10px) 
+  top: calc(50% - 10px)
 .navbar-burger span:nth-child(2)
-  top: calc(50% - 1px) 
+  top: calc(50% - 1px)
 .navbar-burger span:nth-child(3)
-  top: calc(50% + 8px) 
+  top: calc(50% + 8px)
 .navbar-burger.is-active span:nth-child(1)
-  transform: translateY(9px) rotate(45deg) 
+  transform: translateY(9px) rotate(45deg)
 .navbar-burger.is-active span:nth-child(3)
-  transform: translateY(-9px) rotate(-45deg) 
+  transform: translateY(-9px) rotate(-45deg)
+
+.hero.is-fullheight-with-navbar
+  min-height: calc(100vh - 10rem)
