fix affichage images et padding presentations

--- a/src/all.sass
+++ b/src/all.sass
@@ -33,3 +33,7 @@ $navbar-item-img-max-height: auto
 
 .hero.is-fullheight-with-navbar
   min-height: calc(100vh - 10rem)
+
++mobile
+  .p-6
+    padding: 1.5rem !important
