--- a/src/all.sass
+++ b/src/all.sass
@@ -11,6 +11,26 @@ $black: #2b2523
 // $navbar-breakpoint: 1220px
 // $navbar-height: 10rem
 $navbar-item-img-max-height: auto
+$menu-item-color: $white
+
+.social
+  padding: 2em
+.social a
+  padding: .5em .5em .3em .5em
+  border-radius: 1em
+  background-color: $white
+  margin: .5em
+  width: 1em
+  height: 1em
+  vertical-align: middle
+  display: inline
+
+.contact-info a
+  color: $white
+  padding: .5em
+.contact-info a:hover
+  background-color: $white
+  color: $primary
 
 @import "~bulma"
 
