--- a/src/all.sass
+++ b/src/all.sass
@@ -55,5 +55,9 @@ $menu-item-color: $white
   min-height: calc(100vh - 10rem)
 
 +mobile
+  .title.is-1
+    font-size: 2.2rem
   .p-6
     padding: 1.5rem !important
+  .presentations.section, .presentations section
+    padding: 0.8rem 0
