--- a/src/all.sass
+++ b/src/all.sass
@@ -54,6 +54,12 @@ $menu-item-color: $white
 .hero.is-fullheight-with-navbar
   min-height: calc(100vh - 10rem)
 
+.decouvrir .hero-body
+  @media (max-height: 800px) and (max-width: 768px)
+    padding: 9rem 1.5rem
+  @media (min-height: 801px) and (min-width: 769px)
+    padding: 18rem 1.5rem
+
 +mobile
   .title.is-1
     font-size: 2.2rem
