ajout diplomes / formations / experiences page a propos

--- a/src/all.sass
+++ b/src/all.sass
@@ -34,6 +34,9 @@ $menu-item-color: $white
 
 @import "~bulma"
 
+ul
+  list-style-type: disc
+
 .navbar-burger
   height: auto
   margin-right: 20px
