meilleur alignement li listes a propos

--- a/src/all.sass
+++ b/src/all.sass
@@ -63,6 +63,10 @@ ul
   @media (min-height: 801px) and (min-width: 769px)
     padding: 18rem 1.5rem
 
+.liste-a-propos
+  margin-left: 30%
+  margin-right: 15%
+
 +mobile
   .title.is-1
     font-size: 2.2rem
@@ -70,3 +74,6 @@ ul
     padding: 1.5rem !important
   .presentations.section, .presentations section
     padding: 0.8rem 0
+  .liste-a-propos
+    margin-left: 5%
+    margin-right: 5%
