base page mediation

--- a/src/all.sass
+++ b/src/all.sass
@@ -34,9 +34,6 @@ $menu-item-color: $white
 
 @import "~bulma"
 
-ul
-  list-style-type: disc
-
 .navbar-burger
   height: auto
   margin-right: 20px
@@ -66,6 +63,9 @@ ul
 .liste-a-propos
   margin-left: 30%
   margin-right: 15%
+
+.liste-a-propos ul
+  list-style-type: disc
 
 +mobile
   .title.is-1
