ajustement affichage presentation a-propos pour mobiles

--- a/src/all.sass
+++ b/src/all.sass
@@ -60,6 +60,10 @@ $menu-item-color: $white
   @media (min-height: 801px) and (min-width: 769px)
     padding: 18rem 1.5rem
 
+.presentation-a-propos
+  margin-left: 1.5rem
+  margin-right: 1.5rem
+
 .liste-a-propos
   margin-left: 30%
   margin-right: 15%
@@ -74,6 +78,13 @@ $menu-item-color: $white
     padding: 1.5rem !important
   .presentations.section, .presentations section
     padding: 0.8rem 0
+  .a-propos, .a-propos-intro
+    padding: 0
+  .a-propos-intro
+    margin-bottom: 1.5rem
+  .presentation-a-propos
+    margin-left: 0rem
+    margin-right: 0rem
   .liste-a-propos
     margin-left: 5%
     margin-right: 5%
