passe les <strong> en blanc si enfants de .has-text-white

--- a/src/all.sass
+++ b/src/all.sass
@@ -76,6 +76,9 @@ $menu-item-color: $white
 .liste-a-propos ul
   list-style-type: disc
 
+.has-text-white strong
+  color: white
+
 +mobile
   .title.is-1
     font-size: 2.2rem
