fix colums depasse dans a propos intro

--- a/src/all.sass
+++ b/src/all.sass
@@ -90,6 +90,8 @@ $menu-item-color: $white
     padding: 0
   .a-propos-intro
     margin-bottom: 1.5rem
+  .a-propos-intro .columns
+    margin: 0
   .presentation-a-propos
     margin-left: 0rem
     margin-right: 0rem
