Creation 4 pages sport

--- a/src/all.sass
+++ b/src/all.sass
@@ -73,7 +73,7 @@ $menu-item-color: $white
   margin-left: 30%
   margin-right: 15%
 
-.liste-a-propos ul
+.liste-a-propos ul, .liste-prerequis, .liste-tarifs
   list-style-type: disc
 
 .has-text-white strong
