--- a/src/all.sass
+++ b/src/all.sass
@@ -79,6 +79,11 @@ $menu-item-color: $white
 .has-text-white strong
   color: white
 
+.images-bas-de-page .column
+  flex-basis: unset
+  flex-grow: unset
+  flex-shrink: unset
+
 +mobile
   .title.is-1
     font-size: 2.2rem
