--- a/src/all.sass
+++ b/src/all.sass
@@ -8,7 +8,7 @@ $primary-invert: $animapaise-blue-invert
 $body-color: #333
 $black: #2b2523
 
-// $navbar-breakpoint: 1220px
+$navbar-breakpoint: 1295px
 // $navbar-height: 10rem
 $navbar-item-img-max-height: auto
 $menu-item-color: $white
@@ -32,9 +32,9 @@ $menu-item-color: $white
   background-color: $white
   color: $primary
 
-.carte-mediation
+.carte-mediation, .carte-article
   transition: transform .2s
-.carte-mediation:hover
+.carte-mediation:hover, .carte-article:hover
   transform: scale(1.1)
 
 @import "~bulma"
