possibilite de mettre des liens sur les presentations accueil

--- a/src/all.sass
+++ b/src/all.sass
@@ -32,9 +32,9 @@ $menu-item-color: $white
   background-color: $white
   color: $primary
 
-.carte-mediation, .carte-article
+.carte-mediation, .carte-article, .presentation-accueil
   transition: transform .2s
-.carte-mediation:hover, .carte-article:hover
+.carte-mediation:hover, .carte-article:hover, .presentation-accueil:hover
   transform: scale(1.1)
 
 @import "~bulma"
