--- a/src/all.sass
+++ b/src/all.sass
@@ -93,6 +93,11 @@ $menu-item-color: $white
   margin-top: 50px
   margin-bottom: 50px
 
+.tarif
+  margin-left: 1rem
+  margin-right: 1rem
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1)
+
 +mobile
   .title.is-1
     font-size: 2.2rem
@@ -115,3 +120,6 @@ $menu-item-color: $white
   .article-content iframe
     width: 100% !important
     min-height: 300px
+  .tarif
+    margin-left: 0rem
+    margin-right: 0rem
