--- a/src/all.sass
+++ b/src/all.sass
@@ -98,6 +98,13 @@ $menu-item-color: $white
   margin-right: 1rem
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1)
 
+.markdown p
+  margin-top: 0.7rem
+
+.markdown ul
+  list-style-type: disc
+  padding: 1rem 2rem
+
 +mobile
   .title.is-1
     font-size: 2.2rem
