fix dépassement liens articles

--- a/src/all.sass
+++ b/src/all.sass
@@ -74,6 +74,9 @@ $menu-item-color: $white
   flex-grow: unset
   flex-shrink: unset
 
+.article-content
+  overflow-wrap: break-word
+
 .article-content p>img
   display: block
   margin: auto
